NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/NATT_Approval__mdt.object-meta.xml
<CustomObject>
    <description>NATT: Used from the NattQuoteCon to populate a default approver if the account team is missing.</description>
    <label>NATT Approval</label>
    <pluralLabel>NATT Approvals</pluralLabel>
</CustomObject>