NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/MX_Default_Approver_Username__c.field-meta.xml
<CustomField>
    <fullName>MX_Default_Approver_Username__c</fullName>
    <description>for mexico approvers</description>
    <label>MX Default Approver Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>