NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_CFO_Approver_Username__c.field-meta.xml
<CustomField>
    <fullName>NATT_CFO_Approver_Username__c</fullName>
    <label>CFO Approver Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>