NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_Default_Approver_Username__c.field-meta.xml
<CustomField>
    <fullName>NATT_Default_Approver_Username__c</fullName>
    <description>the default approver if no account team is found</description>
    <label>Default Approver Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>