NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_Internal_Approver_1_First_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internal_Approver_1_First_Last_Name__c</fullName>
    <label>Internal Approver 1 First Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>