NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_Internal_Approver_4_Username__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internal_Approver_4_Username__c</fullName>
    <description>NATT</description>
    <label>Internal Approver 4 Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>