NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_Special_Req_Approver_First_Last__c.field-meta.xml
<CustomField>
    <fullName>NATT_Special_Req_Approver_First_Last__c</fullName>
    <label>Special Req Approver First Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>