NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_Special_Request_Approver_Username__c.field-meta.xml
<CustomField>
    <fullName>NATT_Special_Request_Approver_Username__c</fullName>
    <description>NATT</description>
    <label>Special Request Approver Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>