NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_VP_Approver_First_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_VP_Approver_First_Last_Name__c</fullName>
    <label>VP Approver First Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>