NATTQA-ENV/force-app/main/default/objects/NATT_Approval__mdt/fields/NATT_VP_Approver_Username__c.field-meta.xml
<CustomField>
    <fullName>NATT_VP_Approver_Username__c</fullName>
    <label>VP Approver Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>